fix variable names and vertical alignment

--- a/app/components/NetworkConfigurationTooltip/NetworkConfigurationTooltip.scss
+++ b/app/components/NetworkConfigurationTooltip/NetworkConfigurationTooltip.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   width: 400px;
-  height: 360px;
+  height: 375px;
 
   span {
     text-align: left;
@@ -90,6 +90,7 @@
 }
 
 .warningIcon {
+  vertical-align: text-bottom;
   path {
     fill: #d355e7;
   }
